added css and minor fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
     color:orange;
-    background-image:url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.unilad.co.uk%2Fwp-content%2Fuploads%2F2020%2F05%2FPA-36730838.jpg&f=1&nofb=1')
+    background-image:url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Feskipaper.com%2Fimages%2Femperor-penguins-antartica-1.jpg&f=1&nofb=1');
+    padding: 90px;
 }
