--- a/src/components/component.css
+++ b/src/components/component.css
@@ -10,7 +10,7 @@
     font-size: large;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: oblique;
-    text-align: center;
+    text-align:left;
     color:white;
 }
 
