--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
     color:orange;
-    background-image:url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Feskipaper.com%2Fimages%2Femperor-penguins-antartica-1.jpg&f=1&nofb=1');
+    background-image:url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapertag.com%2Fwallpaper%2Ffull%2Fe%2Ff%2F5%2F805974-full-size-north-pole-wallpapers-1920x1080-for-computer.jpg&f=1&nofb=1');
     padding: 90px;
 }
